Basis Java 16 og noen eksempel (#1332)
* Basis Java 16 og noen eksempel

* Dockerfile Java16