@@ -1,4 +1,4 @@
-FROM navikt/java:11-appdynamics
+FROM navikt/java:16-appdynamics
 
 LABEL org.opencontainers.image.source=https://github.com/navikt/fp-abakus
 ENV APPD_ENABLED=true
@@ -18,7 +18,8 @@ COPY web/target/lib/*.jar ./
 ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0 \
     -Djava.security.egd=file:/dev/urandom \
     -Duser.timezone=Europe/Oslo \
-    -Dlogback.configurationFile=conf/logback.xml"
+    -Dlogback.configurationFile=conf/logback.xml \
+    --illegal-access=permit"
 
 # Export vault properties
 COPY .scripts/03-import-appdynamics.sh /init-scripts/03-import-appdynamics.sh
